refactor: prefer non-primitive Java collection types