@@ -3,8 +3,7 @@ package sharetrace.graph;
 import com.fasterxml.jackson.annotation.JsonAnyGetter;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonProperty;
-import it.unimi.dsi.fastutil.objects.Object2ObjectOpenHashMap;
-import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
 import java.util.function.Supplier;
 import org.jgrapht.Graph;
@@ -25,10 +24,10 @@ public final class SimpleContactNetwork extends GraphDelegator<Integer, Temporal
   }
 
   private Map<String, ?> withGraphSize(Graph<?, ?> target, Map<String, ?> props) {
-    var newProps = new Object2ObjectOpenHashMap<String, Object>(props);
+    var newProps = new HashMap<String, Object>(props);
     newProps.put("nodes", target.vertexSet().size());
     newProps.put("edges", target.edgeSet().size());
-    return Collections.unmodifiableMap(newProps);
+    return Map.copyOf(newProps);
   }
 
   public SimpleContactNetwork(Graph<Integer, TemporalEdge> target, String type) {
